--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.14",
     "react": "^19.1.0",
+    "react-compiler-runtime": "^19.0.0-beta-af1b7da-20250417",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@tailwindcss/vite": "^4.0.14"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "eslint": "^9.25.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "prettier": "3.5.3",
     "tailwindcss": "^4.0.14",
-    "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
